<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    android:background="#000029"
    android:backgroundTint="#000029"
    tools:context=".TampilActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000029"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="256dp"
            android:layout_height="300dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="70dp"
            android:background="#FF0000"
            android:backgroundTint="#1C0C0C"
            android:contentDescription="@string/gambar"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_foreground" />


        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:background="#000029"
            android:text="@string/judul_film"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_rilis"
                    android:textColor="#FF3D00"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tgl_rilis"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/aktor_film"
                    android:textColor="#FF3D00"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_aktor"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_weight="1"
                    android:text="@string/aktor"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/genre_film"
                    android:textColor="#FF3D00"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/genre"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/sinopsis_film"
            android:textColor="#FF3D00"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sinopsis"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/medium_text"
            android:textStyle="normal" />


    </LinearLayout>
</ScrollView>